--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
    <title>Mingyue Yu's Personal Website Portfolio</title>
  </head>
  <body>
-   <nav>
-     <ul>
-       <li><a href=”/”>Home</a></li>
-       <li><a href=”/about”>About</a></li>
-       <li><a href=”/resume”>Resume</a></li>
-       <li><a href=”/blog”>Blog</a></li>
-     </ul>
-   </nav>
    <div class=”container”>
      <div class=”blurb”>
-       <h1>Hi, I am Mingyue Yu!</h1>
-       <p>This is my first page for my personal website!</a></p>
+       <h1>Mingyue Yu's Personal Website</h1>
      </div>
    </div>
    <footer>
