--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>Mingyue Yu's Personal Website Portfolio</title>
+   <title>Mingyue Yu's Personal Website</title>
  </head>
  <body>
    <div class=”container”>
