--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <title>Mingyue Yu's Personal Website</title>
- </head>
- <body>
-   <div class=”container”>
-     <div class=”blurb”>
-       <h1>Mingyue Yu's Personal Website</h1>
-     </div>
-   </div>
-   <footer>
-   <ul>
-     <li><a href=”mailto:yumy_1119@163.com”>yumy_1119@163.com</a></li>
-   </ul>
-   </footer>
- </body>
+<head>
+  <title>Personal Homepage</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+
+    p {
+      color: #666;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+
+    strong {
+      font-weight: bold;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>Personal Information</h1>
+  <p><strong>Name: </strong>Mingyue Yu</p>
+  <p><strong>Email: </address>:</strong><a href="mailto:yumy_1119@163.com">yumy_1119@163.com</a></p>
+</body>
 </html>
