--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
       padding: 20px;
     }
 
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
     h1 {
       color: #333;
       text-align: center;
+      margin-top: 0;
     }
 
     p {
@@ -32,8 +43,10 @@
   </style>
 </head>
 <body>
-  <h1>Personal Information</h1>
-  <p><strong>Name: </strong>Mingyue Yu</p>
-  <p><strong>Email: </address>:</strong><a href="mailto:yumy_1119@163.com">yumy_1119@163.com</a></p>
+  <div class="container">
+    <h1>Personal Information</h1>
+    <p><strong>Name: </strong>Mingyue Yu</p>
+    <p><strong>Email: </address>:</strong><a href="mailto:yumy_1119@163.com">yumy_1119@163.com</a></p>
+  </div>
 </body>
 </html>
