--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="container">
     <h1>Personal Information</h1>
     <p><strong>Name: </strong>Mingyue Yu</p>
-    <p><strong>Email: </address>:</strong><a href="mailto:yumy_1119@163.com">yumy_1119@163.com</a></p>
+    <p><strong>Email</address>:</strong><a href="mailto:yumy_1119@163.com">yumy_1119@163.com</a></p>
   </div>
 </body>
 </html>
